# Three-Cameras

./: README.md
GUI/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.02e8a1a  Main.qml  main.cpp  qtcsettings.cmake
GUI/Inc/: Camera.h  ImageProvider.h  ImageWindow.h  Service.h  imageprocessor.h
GUI/QFModule/: CMakeLists.txt  QFInit.hpp  qmldir
GUI/QFModule/Control/: QFBackground.qml  QFButton.qml  QFButton1.qml  QFButton2.qml  QFDialog.qml  QFFolderDialog.qml  QFImgWindow.qml  QFInput.qml  QFListView.qml  QFProgress.qml  QFTextInput.qml  QFTitle.qml  QFUpload.qml
GUI/Src/: Camera.cpp  ImageProvider.cpp  ImageWindow.cpp  Service.cpp  imageprocessor.cpp
GUI/include/neoapi/: neoapi_camera_info.hpp
GUI/lib/: neoapi_cpp.lib
GUI/yolov5/include/: yolov5_seg_trt.h
GUI/yolov5/lib/: yolov5segtrt.lib
Len-MCU/: .cproject  .mxproject  CMakeLists.txt  CameraMCU.ioc  STM32H743.cfg
Len-MCU/Core/Inc/: crc16.h  main.h
Len-MCU/Core/Src/: adc.c  freertos.c  log.h  main.c  usart.c
Len-MCU/MDK-ARM/: CameraMCU.uvguix.Wind  CameraMCU.uvoptx  CameraMCU.uvprojx  startup_stm32f407xx.lst
Len-MCU/MDK-ARM/CameraMCU/: CameraMCU.axf  CameraMCU.build_log.htm  CameraMCU.hex  CameraMCU.htm  CameraMCU.lnp  CameraMCU.map  CameraMCU_CameraMCU.dep  gpio.crf  gpio.d  main.crf  main.d  startup_stm32f407xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_gpio.d  stm32f4xx_hal_msp.crf  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.crf  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.crf  stm32f4xx_hal_rcc_ex.d  (+8 more)
Len-MCU/MDK-ARM/RTE/_CameraMCU/: RTE_Components.h
MAIN-MCU/: .project
MAIN-MCU/Core/Inc/: FreeRTOSConfig.h  stm32f4xx_it.h  usart.h
MAIN-MCU/Core/Src/: crc16.c  gpio.c  log.c  stm32f4xx_it.c  tim.c
